--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,12 @@
 ﻿services:
 - type: web
   name: valentines
-  runtime: dotnet
+  runtime: docker
   repo: https://github.com/Yang-Yijin/valentines.git
   branch: main
-  buildCommand: dotnet publish -c Release -o out
-  startCommand: dotnet out/Valentine.dll
   plan: free
   autoDeploy: true
+  dockerfilePath: ./Dockerfile
   envVars:
   - key: ASPNETCORE_ENVIRONMENT
     value: Production
